--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -27,6 +27,9 @@ Previously:
 
 	- [X] Completed chapter 1 of the vulkan guide, initialising vulkan						08/06
 	- [X] Fix issue from chapter 1 (no entry point for vkQueueSubmit2() found)				08/06
+	- [X] Fixed API issue (it cannot be fixed). Driver does not support 1.3					08/06
+	- [X] Moved on from all issues, converted to the Legacy Guide and caught up				08/06
+	- [X] Set up and load triangle shader completed											08/06
 
 Next time:
- 	- [ ] Begin chapter 2 of the vulkan guide (https://vkguide.dev/docs/new_vkguide/chapter_2)
+ 	- [ ] Compelete chapter 2 of the vulkan guide (https://vkguide.dev/docs/chapter-2/pipeline_walkthrough/)
