--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -31,5 +31,7 @@ Previously:
 	- [X] Moved on from all issues, converted to the Legacy Guide and caught up				08/06
 	- [X] Set up and load triangle shader completed											08/06
 
+	- [X] Pipeline set up and triangle rendering											14/06
+
 Next time:
  	- [ ] Compelete chapter 2 of the vulkan guide (https://vkguide.dev/docs/chapter-2/pipeline_walkthrough/)
