--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -36,6 +36,8 @@ Previously:
 
 	- [X] Pipeline set up and triangle rendering											14/06
 	- [X] Passing colour data through the shader data to render coloured triangle			14/06
+	- [X] Refactoring using a deletion queue												14/06
+	- [X] Completed chapter 2 of the vulkan guide, the graphics pipeline					14/06
 
 Next time:
- 	- [ ] Compelete chapter 2 of the vulkan guide (https://vkguide.dev/docs/chapter-2/pipeline_walkthrough/)
+ 	- [ ] Compelete chapter 3 of the vulkan guide (https://vkguide.dev/docs/chapter_3)
