--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -40,9 +40,10 @@ Previously:
 	- [X] Completed chapter 2 of the vulkan guide, the graphics pipeline					14/06
 	- [X] Updated the Vulkan API to version 1.3												14/06
 	- [X] Fix the issue regarding VmaAllocator, seems to be using Vk 1.3					14/06
+	- [X] Swap between the 3 pipelines defined												14/06
+	- [X] Refactor selected shader to be enum												14/06
+	- [X] Refactor some code and add comments where needed									14/06
 
 Next time:
-	- [ ] Swap between the 3 pipelines defined
-	- [ ] Refactor some code and add comments where needed
 	- [ ] Merge this branch into develop and branch off to Feature/Renderer
  	- [ ] Complete chapter 3 of the vulkan guide (https://vkguide.dev/docs/chapter_3)
