--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -61,6 +61,7 @@ Previously:
 	- [X] Implement the ImGui section of the vulkan guide									20/06 *
 	- [X] Open the ImGui demo window														20/06
 	- [X] Custom ImGui window with timer metrics											20/06
+	- [X] Refactor engine to use resource manager and scenes								20/06
 
 Next time:
 
@@ -77,5 +78,4 @@ Next time:
 
 	- [ ] Go through the console window on termination and attempt to clear the validation errors/warnings
 
-	- [ ] Refactor all code to abstract certain features. i.e. resource management singleton
 	- [ ] Refactor all code to match the 1.3 support for Vulkan
