--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -46,6 +46,8 @@ Previously:
 	- [X] Added WASD/QE control to the camera												22/06
 	- [X] Further abstracted vk_engine.h separating gpu data and pipeline builder			22/06
 
+	- [X] Added toggle for the camera mouse motion											23/06
+
 Next time:
 
 	- [ ] Render several different models using different textures
