--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -6,6 +6,7 @@ Future Todo:
 	- [ ] Privatise unnecessary variables and provide const correct accessors
 	- [ ] Define an error code and proper logging for Fish (i.e. FISH_ERROR, FISH_WARN, FISH_FATAL, FISH_LOG) potentially coloured in the console
 	- [ ] Begin implementing the 1.3 API as our currently implementation uses outdated code
+	- [ ] Create new folders for different parts (i.e. Backend, Core, Ecs) 
 
 Previously:
 	- [X] Recreated a new project using Vulkan and SDL as opposed to Vulkan and GLFW.		05/06
@@ -63,11 +64,13 @@ Previously:
 	- [X] Objects listed in ImGui and modified at runtime									15/07
 	- [X] Implemented the codebase for use of the entity component system					15/07 *
 
+	- [X] Implemented the (broken)initialisation code for basic entity component systems	17/07
+
 Next time:
 
-	- [ ] Create new folders for different parts (i.e. Backend, Core, Ecs)
+	- [ ] Pause work on the ECS until the 1.3 work has been completed, things will change a lot in this time
 
-	- [ ] Separate the ECS classes into their own respective files
+	- [ ] Refactor all code to match the 1.3 support for Vulkan
 
 	- [ ] Begin refactoring current code to reflect the ECS demo (have current scene objects fall to gravity)
 
@@ -86,5 +89,3 @@ Next time:
 	- [ ] Sort the render objects container before rendering by Pipeline and Mesh, reducing number of binds (see Chpt 3)
 
 	- [ ] Go through the console window on termination and attempt to clear the validation errors/warnings
-
-	- [ ] Refactor all code to match the 1.3 support for Vulkan
