--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -68,6 +68,8 @@ Previously:
 
 Next time:
 
+	- [!!!!] Refactor to use Vulkan API 1.3, stabilise the branch, merge to dev, create a scenes branch
+
 	- [ ] Pause work on the ECS until the 1.3 work has been completed, things will change a lot in this time
 
 	- [ ] Refactor all code to match the 1.3 support for Vulkan
