--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -66,7 +66,13 @@ Previously:
 
 	- [X] Implemented the (broken)initialisation code for basic entity component systems	17/07
 
+	- [X] Refactored to Chapter 2 of the new 1.3 API										20/07
+
+	- [X] Refactored half of Chapter 2 of the new 1.3 API									21/07
+
 Next time:
+
+	- [ ] Continue from the middle of setting up ImGui in Chapter 2 
 
 	- [ ] Come back to Improving the render loop chapter in the new API (the last bit of it) with changing create swapchain
 
