--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -77,11 +77,13 @@ Previously:
 
 	-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 
 
-	- [X] Reviewed the code after a month long break.										27/08
-	
+	- [X] Reviewed the code after a month long break.										27/08	
 	- [X] Refactored the rest of Chapter 2 of the new 1.3 API								27/08
+	- [X] Editable push constants/background effects via ImGui								27/08
 
 Next time:
+
+	- [ ] Begin chapter 3
 
 	- [ ] We want to take a step back here, we don't entirely want to work on the scene and ECS if we
 	- [ ] don't have a stable framework to build upon. We need the Vulkan 1.3 features to really begin understanding
