Chapter 5 GLTF scene nodes & textures.
Bit of a weird commit, the clipping algorithm is a little weird.

--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -94,6 +94,8 @@ Previously:
 	- [X] Completed setting up materials in Chapter 4										30/08
 	- [X] Completed meshes and camera in Chapter 4 (the final part of Chapter 4)			30/08
 
+	- [X] Brought back the interactive camera from Chapter 5								31/08
+
 
 Next time:
 
