--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -8,6 +8,8 @@ Future Todo:
 	- [ ] Begin implementing the 1.3 API as our currently implementation uses outdated code
 	- [ ] Create new folders for different parts (i.e. Backend, Core, Ecs) 
 	- [ ] When creating our draw image, set its initial dimensions to be the monitor resolution instead of window extents.
+	- [ ] Implement a framework class that refactors the way our engine is loaded (similar to ACL/Tyro)
+	`-> Included in this is to refactor the vk_engine class to a fish_vulkan_backend class with classes for individual components.
 
 Previously:
 
@@ -28,7 +30,7 @@ Previously:
 	- [X] Passing colour data through the shader data to render coloured triangle			14/06
 	- [X] Refactoring using a deletion queue												14/06
 	- [X] Completed chapter 2 of the vulkan guide, the graphics pipeline					14/06 *
-	- [X] Updated the Vulkan API to version 1.3												14/06 *
+	- [X] Updated the Vulkan API to version 1.3	(not the codebase)							14/06 *
 	- [X] Fix the issue regarding VmaAllocator, seems to be using Vk 1.3					14/06
 
 	- [X] Swap between the 3 pipelines defined												14/06
@@ -53,7 +55,7 @@ Previously:
 	- [X] Custom ImGui window with timer metrics											20/06
 	- [X] Refactor engine to use resource manager and scenes								20/06
 
-	- [X] Added WASD/QE control to the camera												22/06 *
+	- [X] Added WASD/QE interative control to the camera									22/06 *
 	- [X] Further abstracted vk_engine.h separating gpu data and pipeline builder			22/06
 
 	- [X] Added toggle for the camera mouse motion											23/06
@@ -68,31 +70,31 @@ Previously:
 	- [X] Attempted listing all scene objects and modifying them at runtime	(failed)		07/07
 
 	- [X] Objects listed in ImGui and modified at runtime									15/07
-	- [X] Implemented the codebase for use of the entity component system					15/07 *
+	- [X] Implemented the codebase for use of the entity component system					15/07 
 
 	- [X] Implemented the (broken) initialisation code for basic entity component systems	17/07
 
-	- [X] Refactored to Chapter 2 of the new 1.3 API										20/07
+	- [X] Refactored to Chapter 2 of the new 1.3 API										20/07 
 
 	- [X] Refactored half of Chapter 2 of the new 1.3 API									21/07
 
 	-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 
 
 	- [X] Reviewed the code after a month long break.										27/08	
-	- [X] Refactored the rest of Chapter 2 of the new 1.3 API								27/08
+	- [X] Refactored the rest of Chapter 2 of the new 1.3 API								27/08 *
 	- [X] Editable push constants/background effects via ImGui								27/08
 
-	- [X] Implemented graphics pipeline														28/08
-	- [X] Implemented mesh buffers to load triangle and rectangle							28/08
-	- [X] Load GLTF mesh from file															28/08
+	- [X] Implemented graphics pipeline	in Chapter 3										28/08
+	- [X] Implemented mesh buffers to load triangle and rectangle in Chapter 3				28/08
+	- [X] Load GLTF mesh from file in Chapter 3												28/08
 
 	- [X] Completed blending in Chapter 3													30/08
-	- [X] Completed window resizing in Chapter 3											30/08
+	- [X] Completed window resizing in Chapter 3 (the final part of Chapter 3)				30/08 *
 	- [X] Completed descriptor abstractions in Chapter 4									30/08
 	- [X] Completed textures in Chapter 4													30/08
 	- [X] Completed engine architecture in Chapter 4										30/08
 	- [X] Completed setting up materials in Chapter 4										30/08
-	- [X] Completed meshes and camera in Chapter 4 (the final part of Chapter 4)			30/08
+	- [X] Completed meshes and camera in Chapter 4 (the final part of Chapter 4)			30/08 *
 
 	- [X] Brought back the interactive camera from Chapter 5								31/08
 	
@@ -101,32 +103,19 @@ Previously:
 	- [X] Completed GLTF scene nodes in Chapter 5											01/09
 	- [X] Completed GLTF textures in Chapter 5												01/09
 	- [X] Completed faster draw in Chapter 5 (the final part of Chapter 5)					01/09 *
-
+	- [X] Completed the refactor to use Vulkan API 1.3										01/09 *
 
 Next time:
 
-	- [!!!!] Refactor to use Vulkan API 1.3 (done), stabilise the branch (doing), merge to dev, create a scenes branch
-
+	- [ ] Abstract/Refactor new 1.3 codebase
+	
+	- [ ] Comment all functions and variables with at least something
+	
+	- [ ] Mess around with the current version and test out new models/textures/primitives
+	
+	- [ ] Implement a simple logger to update throughout important steps in the engine.
+	
 	- [ ] Fix the cleanup error on window close.
 
 	- [ ] Remove most (if not all) validation errors/warnings in the console.
 
-	- [ ] Implement a simple logger to update throughout important steps in the engine.
-
-	- [ ] Begin refactoring current code to reflect the ECS demo (have current scene objects fall to gravity)
-
-	- [ ] Implement the new scene button functionality
-	
-	- [ ] Implement the save scene button functionality
-	
-	- [ ] Implement the load scene button functionality
-
-	- [ ] Implement a framework class that refactors the way our engine is loaded (similar to ACL/Tyro)
-	`-> Included in this is to refactor the vk_engine class to a fish_vulkan_backend class with classes for individual components.
-
-
-	- [ ] Render several different models using different textures (see https://kylehalladay.com/blog/tutorial/vulkan/2018/01/28/Textue-Arrays-Vulkan.html)
-
-	- [ ] Sort the render objects container before rendering by Pipeline and Mesh, reducing number of binds (see Chpt 3)
-
-	- [ ] Go through the console window on termination and attempt to clear the validation errors/warnings
