--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -106,6 +106,7 @@ Previously:
 	- [X] Completed the refactor to use Vulkan API 1.3										01/09 *
 
 	- [X] Further commenting of all code (renaming and understanding code)					01/09
+	- [X] Implemented coloured console logging for normal/warning/fatal						01/09
 	- [X] Fixed all validation errors/warnings within the console							01/09 *
 
 	- [X] Abstracted some engine code into their own files									02/09
@@ -118,17 +119,14 @@ Previously:
 	- [X] Saving all loaded object's transform, name, and camera data to JSON				04/09 *
 
 	- [X] Attempting to load from JSON														05/09
+	
+	- [X] Loading object and camera data from JSON and applying it at runtime				06/09 *
 
 Next time:
-	
-	- [ ] Load several models which are listed in an ImGui scene object list
-	- [ ] Begin saving all positions of the scene objects
-
+		
 	- [ ] Comment all functions and variables with at least something
 	
-	- [ ] Mess around with the current version and test out new models/textures/primitives
-	
-	- [ ] Implement a simple logger to update throughout important steps in the engine.
+	- [ ] Mess around with the current version and test out new models/textures/primitives 
 	
 	- [ ] Fix the cleanup error on window close.
 
