--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -123,6 +123,7 @@ Previously:
 	- [X] Loading object and camera data from JSON and applying it at runtime				06/09 *
 
 	- [X] Renaming scene functionality working												06/09
+	- [X] Saving and loading scene names working											06/09
 
 Next time:
 		
