Long hard attempt at creating new scenes, to no avail.

--- a/code/src/todo.txt
+++ b/code/src/todo.txt
@@ -124,6 +124,7 @@ Previously:
 
 	- [X] Renaming scene functionality working												06/09
 	- [X] Saving and loading scene names working											06/09
+	- [X] In the process of creating new scenes												06/09
 
 Next time:
 		
